--- a/templates/entries/list.html
+++ b/templates/entries/list.html
@@ -60,7 +60,7 @@
     </div>
 
     <!-- Summary Cards -->
-    <div class="row row-deck row-cards mb-4">
+    <div class="row row-deck row-cards mb-4 mt-2">
         <div class="col-sm-6 col-lg-4">
             <div class="card card-sm">
                 <div class="card-body">
