Changing icon and showing totals amount for filtered entries

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -12,8 +12,36 @@
     /* Dark Theme Color */
   }
 
-  /* Header Sticky Class */
- 
+  /* Navbar Height and Spacing */
+  .navbar {
+    min-height: 3.5rem !important;
+    padding-top: 0rem !important;
+    padding-bottom: 0rem !important;
+  }
+
+  .navbar-brand {
+    padding-top: 0.5rem !important;
+    padding-bottom: 0.5rem !important;
+  }
+
+  .navbar-brand img {
+    height: 1.5rem !important;
+  }
+
+  .nav-link {
+    padding-top: 0.5rem !important;
+    padding-bottom: 0.5rem !important;
+  }
+
+  .avatar {
+    width: 2rem !important;
+    height: 2rem !important;
+  }
+
+  .avatar-md {
+    width: 2rem !important;
+    height: 2rem !important;
+  }
 
   /* Mobile Logo Centering */
   @media (max-width: 767.98px) {
