--- a/templates/base.html
+++ b/templates/base.html
@@ -232,194 +232,60 @@
   {% block extra_js %}{% endblock %}
 
   <!-- Footer -->
-  <footer class="footer d-print-none">
+  <footer class="footer footer-transparent d-print-none">
     <div class="container-xl">
-      <div class="row">
-        <!-- Navigation Menu -->
-        <div class="col-12 col-lg-8">
-          <div class="row">
-            <div class="col-6 col-md-6">
-              <h3 class="footer-title">Navigation</h3>
-              <ul class="list-unstyled">
-                <li class="mb-2">
-                  <a href="{% url 'dashboard' %}" class="link-secondary">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dashboard me-2"
-                      width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                      stroke-linecap="round" stroke-linejoin="round">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M4 4h6v8h-6z"></path>
-                      <path d="M4 16h6v4h-6z"></path>
-                      <path d="M14 12h6v8h-6z"></path>
-                      <path d="M14 4h6v4h-6z"></path>
-                    </svg>
-                    Dashboard
-                  </a>
-                </li>
-                <li class="mb-2">
-                  <a href="{% url 'entry_list' %}" class="link-secondary">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-list me-2" width="24"
-                      height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                      stroke-linecap="round" stroke-linejoin="round">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M9 6l11 0"></path>
-                      <path d="M9 12l11 0"></path>
-                      <path d="M9 18l11 0"></path>
-                      <path d="M5 6l0 .01"></path>
-                      <path d="M5 12l0 .01"></path>
-                      <path d="M5 18l0 .01"></path>
-                    </svg>
-                    Entries
-                  </a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-6 col-md-6">
-              <h3 class="footer-title">Account</h3>
-              <ul class="list-unstyled">
-                {% if user.is_authenticated %}
-                <li class="mb-2">
-                  <a href="{% url 'profile_update' %}" class="link-secondary">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user me-2" width="24"
-                      height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                      stroke-linecap="round" stroke-linejoin="round">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"></path>
-                      <path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"></path>
-                    </svg>
-                    Profile
-                  </a>
-                </li>
-                <li class="mb-2">
-                  <a href="{% url 'logout' %}" class="link-secondary">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-logout me-2" width="24"
-                      height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                      stroke-linecap="round" stroke-linejoin="round">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M14 8v-2a2 2 0 0 0 -2 -2h-7a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h7a2 2 0 0 0 2 -2v-2"></path>
-                      <path d="M7 12h14l-3 -3m0 6l3 -3"></path>
-                    </svg>
-                    Logout
-                  </a>
-                </li>
-                {% else %}
-                <li class="mb-2">
-                  <a href="{% url 'login' %}" class="link-secondary">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-login me-2" width="24"
-                      height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                      stroke-linecap="round" stroke-linejoin="round">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M15 8v-2a2 2 0 0 0 -2 -2h-7a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h7a2 2 0 0 0 2 -2v-2"></path>
-                      <path d="M21 12h-13l3 -3"></path>
-                      <path d="M11 15l-3 -3"></path>
-                    </svg>
-                    Login
-                  </a>
-                </li>
-                <li class="mb-2">
-                  <a href="{% url 'signup' %}" class="link-secondary">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-plus me-2"
-                      width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                      stroke-linecap="round" stroke-linejoin="round">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"></path>
-                      <path d="M16 19h6"></path>
-                      <path d="M19 16v6"></path>
-                      <path d="M6 21v-2a4 4 0 0 1 4 -4h4"></path>
-                    </svg>
-                    Sign Up
-                  </a>
-                </li>
-                {% endif %}
-              </ul>
-            </div>
-          </div>
+      <div class="row text-center align-items-center flex-row-reverse">
+        <div class="col-lg-auto ms-lg-auto">
+          <ul class="list-inline list-inline-dots mb-0">
+            <li class="list-inline-item">
+              <a href="https://github.com/abdullafajal/paisalog" class="link-secondary" rel="noopener">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="24"
+                  height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                  stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                  <path
+                    d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5">
+                  </path>
+                </svg>
+                Source code
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://github.com/abdullafajal/paisalog/issues" class="link-secondary" rel="noopener">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bug" width="24" height="24"
+                  viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                  stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                  <path d="M9 9v-1a3 3 0 0 1 6 0v1"></path>
+                  <path d="M8 9h8a6 6 0 0 1 1 3v3a5 5 0 0 1 -10 0v-3a6 6 0 0 1 1 -3"></path>
+                  <path d="M3 13l4 0"></path>
+                  <path d="M17 13l4 0"></path>
+                  <path d="M12 20l0 -6"></path>
+                  <path d="M4 19l3.35 -2"></path>
+                  <path d="M20 19l-3.35 -2"></path>
+                  <path d="M4 7l3.75 2.4"></path>
+                  <path d="M20 7l-3.75 2.4"></path>
+                </svg>
+                Report an issue
+              </a>
+            </li>
+          </ul>
         </div>
-        <!-- Social Links -->
-        <div class="col-12 col-lg-4 mt-4 mt-lg-0">
-          <div class="row">
-            <div class="col-12">
-              <h3 class="footer-title">Connect</h3>
-              <div class="list-inline list-inline-dots mb-3">
-                <div class="list-inline-item">
-                  <a href="https://github.com/yourusername/paisalog" class="link-secondary" rel="noopener">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="24"
-                      height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                      stroke-linecap="round" stroke-linejoin="round">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path
-                        d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5">
-                      </path>
-                    </svg>
-                    GitHub
-                  </a>
-                </div>
-                <div class="list-inline-item">
-                  <a href="https://github.com/yourusername/paisalog/issues" class="link-secondary" rel="noopener">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bug" width="24"
-                      height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                      stroke-linecap="round" stroke-linejoin="round">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M9 9v-1a3 3 0 0 1 6 0v1"></path>
-                      <path d="M8 9h8a6 6 0 0 1 1 3v3a5 5 0 0 1 -10 0v-3a6 6 0 0 1 1 -3"></path>
-                      <path d="M3 13l4 0"></path>
-                      <path d="M17 13l4 0"></path>
-                      <path d="M12 20l0 -6"></path>
-                      <path d="M4 19l3.35 -2"></path>
-                      <path d="M20 19l-3.35 -2"></path>
-                      <path d="M4 7l3.75 2.4"></path>
-                      <path d="M20 7l-3.75 2.4"></path>
-                    </svg>
-                    Report Issue
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Copyright -->
-      <div class="row mt-4">
-        <div class="col-12 text-center">
-          <p class="text-muted mb-0">
-            Copyright &copy; {% now "Y" %}
-            <a href="{% url 'dashboard' %}" class="link-secondary">Paisalog</a>.
-            All rights reserved.
-          </p>
+        <div class="col-12 col-lg-auto mt-3 mt-lg-0">
+          <ul class="list-inline list-inline-dots mb-0">
+            <li class="list-inline-item">
+              Copyright &copy; {% now "Y" %}
+              <a href="{% url 'dashboard' %}" class="link-secondary">Paisalog</a>.
+              All rights reserved.
+            </li>
+            <li class="list-inline-item">
+              <button id="install-button" style="display:none;">Install App</button>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
   </footer>
-  <style>
-    .footer {
-      padding: 2rem 0;
-      margin-top: 3rem;
-      border-top: 1px solid var(--tblr-border-color);
-    }
-
-    .footer-title {
-      font-size: 1rem;
-      font-weight: 600;
-      margin-bottom: 1rem;
-      color: var(--tblr-body-color);
-    }
-
-    .footer .link-secondary {
-      text-decoration: none;
-      display: flex;
-      align-items: center;
-      color: var(--tblr-secondary);
-      transition: color 0.2s ease-in-out;
-    }
-
-    .footer .link-secondary:hover {
-      color: var(--tblr-primary);
-    }
-
-    .footer .icon {
-      width: 1.25rem;
-      height: 1.25rem;
-    }
-  </style>
 </body>
 
 </html>
